# VibeTranslate

./: .gitignore  COST_TRACKING_README.md  LICENSE  Makefile  README.md  cleancode.md  launch_portable.cmd  launch_portable.ps1  launch_portable.sh
.ci-venv/: pyvenv.cfg
CsharpTranslationFiesta/: CsharpTranslationFiesta.csproj  Logger.cs  Program.cs  README.md  TranslationClient.cs
FSharpTranslate/: CHANGELOG.md  CONTRIBUTING.md  FSharpTranslate.fsproj  GITHUB_RELEASE.md  INSTALLATION.md  Logger.fs  Program.fs  README.md  RELEASE_NOTES.md
FreeTranslateWin/: FreeTranslateWin.csproj  Logger.cs  Program.cs  README.md  app.manifest
TranslationFiesta.WinUI/: .gitignore  AnalyticsDashboard.xaml  AnalyticsDashboard.xaml.cs  AnalyticsManager.cs  App.xaml  App.xaml.cs  BLEUScorer.cs  BatchProcessor.cs  CostTracker.cs  CostTrackerTest.cs  ExportManager.cs  HtmlProcessor.cs  Install-Package.ps1  LocalServiceClient.cs  Logger.cs  MainWindow.ProviderAndLocalModels.cs  MainWindow.ProviderSelection.cs  MainWindow.xaml  MainWindow.xaml.cs  Package-README.md  Package.appxmanifest  PortablePaths.cs  Program.cs  ProviderIds.cs  README.md  SecureStore.cs  SettingsService.cs  TemplateEditor.xaml  TemplateEditor.xaml.cs  TemplateManager.cs  TestHtmlProcessing.cs  TestWindow.xaml  TestWindow.xaml.cs  ThemeService.cs  TranslationClient.cs  (+6 more)
TranslationFiestaRust/: Cargo.toml  README.md
TranslationFiestaRust/src/: app_paths.rs  batch.rs  cli.rs  epub.rs  export.rs  file_service.rs  html.rs  language.rs  lib.rs  logger.rs  main.rs  memory.rs  models.rs  settings.rs  translation.rs  ui.rs
(+410 files in other folders)
